--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,53 @@
 
 /* .social-container > img {
 } */
+
+
+/* Tabs*/
+.tab {
+  margin: auto;
+  width: 70%;
+  display: flex;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  justify-content: space-around;
+}
+
+.tablinks {
+  display: inline-block;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  width: 100%;
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: 1px solid black;
+  cursor: pointer;
+  padding: 14px 50px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+.tabcontent > img {
+  width: 72%;
+}
