--- a/src/App.css
+++ b/src/App.css
@@ -175,8 +175,20 @@
 
 /* CONTACT SECTION */
 
+.contact-container {
+  background: black;
+}
+
+.contact-container > h1 {
+  padding-top: 40px;
+  line-height: 60px;
+  font-size: 60px; 
+  font-weight: 50;
+  color: white
+}
+
 /* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
+input[type=text], input[type=email], select, textarea {
   width: 100%; /* Full width */
   padding: 12px; /* Some padding */ 
   border: 1px solid #ccc; /* Gray border */
@@ -210,3 +222,16 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+
+
+/* FOOTER SECTION */
+
+.footer-container {
+  color: white;
+  background: black;
+  overflow: hidden
+}
+
+/* .footer-container > p {
+  margin
+} */
