Added alert box to form submission button as well as extra link styling

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 
 .menulinks > li {
   font-family: myFont;
+  font-weight: bold;
   list-style-type: none;
   display: inline-block;
   margin-left: 60px
